# jobscraper

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  Start.txt  deploy.md  docker-compose.yml  jobs_ag_insurance_20251227_113355.csv  jobs_bnppf_20251226_230620.csv  jobs_bnppf_20251227_104131.csv  jobs_connecting_expertise_20251226_095828.csv  jobs_elia_20251226_232721.csv  jobs_pro_unity_20251226_141647.csv  memory.txt  pyproject.toml  requirements.txt  run.py  run_worker.py  test_workflow.py  test_workflow_ag.py  test_workflow_bnppf.py  test_workflow_elia.py  test_workflow_prounity.py
.claude/: settings.local.json
src/: __init__.py
src/api/: main.py
src/api/routes/: executions.py  health.py  jobs.py  workflows.py
src/browser/: __init__.py  actions.py  manager.py
src/core/: config.py
src/db/: __init__.py  connection.py  job_repository.py  models.py
src/integrations/: __init__.py  m365.py
src/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
src/workflows/: __init__.py  base.py  registry.py
src/workflows/examples/: __init__.py  ag_insurance.py  bnppf_jobs.py  connecting_expertise.py  elia_jobs.py  job_scraper.py  pro_unity.py
